--- a/README
+++ b/README
@@ -41,7 +41,5 @@ VERSION SCHEMA:
              minor = typical release with new features
              maint = maintenance releases; bug fixes only
              bugfix = unplanned releases for critical/security bugs
-
-      Development releases:
-
-         <major>.<minor>-rc<N>
+MODIFIED:
+	Add recursively mount option for filesystems
